Bug 1474878 - fix compile errors found by clang-cl in Windows-only code. r=aceman