mailnews/import/winlivemail/nsWMSettings.cpp
@@ -694,7 +694,7 @@ void WMSettings::SetSmtpServer(nsIDocument *xmlDoc, nsIMsgIdentity *id,
       extgServer->GetKey(getter_Copies(smtpServerKey));
       id->SetSmtpServerKey(smtpServerKey);
 
-      IMPORT_LOG1("SMTP server already exists: %S\n", smtpName);
+      IMPORT_LOG1("SMTP server already exists: %s\n", NS_ConvertUTF16toUTF8(smtpName).get());
     }
     else {
       nsCOMPtr<nsISmtpServer> smtpServer;
@@ -734,7 +734,7 @@ void WMSettings::SetSmtpServer(nsIDocument *xmlDoc, nsIMsgIdentity *id,
         smtpServer->GetKey(getter_Copies(smtpServerKey));
         id->SetSmtpServerKey(smtpServerKey);
 
-        IMPORT_LOG1("Created new SMTP server: %S\n", smtpName);
+        IMPORT_LOG1("Created new SMTP server: %s\n", NS_ConvertUTF16toUTF8(smtpName).get());
       }
     }
   }
